2005-01-06  Davide Viti  <zinosat@tiscali.it>

	* Fixed path in HTML table: now gzipped files are in "zip" dir

2005-01-05  Davide Viti  <zinosat@tiscali.it>

	* l10n-spellcheck.sh: fixed the name of the stats file

	* check_all.sh: "graph.pg" is not kept anymore

2005-01-03  Davide Viti  <zinosat@tiscali.it>

	* check_dit.sh: now results are save both in tar.gz and
	uncompressedformats (using "zip" and "nozip" dirs)
	
	Use "aspell list" instead of "aspell -l" for compatibility with
	future versions
	
	* check_all.sh: use "sort -n" 

2004-12-23  Davide Viti  <zinosat@tiscali.it>

	* l10n-spellcheck.sh: file used by crontab to run periodic checks
	on Alioth. It saves all the stats files in the "history" dir;
	besides this it keeps the resulting output of the last two checks
	symlinked with "latest" and "previous"
	All this output is kept inside ~/public_html/spellcheck/
        crontab set on Alioth at 13:00 MST (21:00 CET)