@@ -1,3 +1,10 @@
+2005-01-10  Davide Viti  <zinosat@tiscali.it>
+
+	* "xtics" on the gnuplot graph are rotated in order to allow more languages to fit on the graph
+
+	* Added directory "build-tools" containing the scripts necessary to rebuild
+	a complete stand-alone environment (aspell, dictionaries, gnuplot)
+
 2005-01-06  Davide Viti  <zinosat@tiscali.it>
 
 	* Fixed path in HTML table: now gzipped files are in "zip" dir
